--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,8 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus vel distinctio aliquid enim repellat iure error reprehenderit eos animi! Cumque sint consectetur saepe iure odit error. Corporis, sint commodi!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus vel distinctio aliquid enim repellat iure error reprehenderit eos animi! Cumque sint consectetur saepe iure odit error. Corporis, sint commodi!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus vel distinctio aliquid enim repellat iure error reprehenderit eos animi! Cumque sint consectetur saepe iure odit error. Corporis, sint commodi!</p>
-    <img src="" alt="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+    
 
 </body>
 </html>
