--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,8 +5,25 @@
     <title>Basic Structure</title>
 </head>
 <body>
-    <blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">How loud earbuds can damage your ears?<br><br>[🎞️ Zack D. Films]<a href="https://t.co/0XSlmbiUbg">pic.twitter.com/0XSlmbiUbg</a></p>&mdash; Massimo (@Rainmaker1973) <a href="https://twitter.com/Rainmaker1973/status/1834249761584529714?ref_src=twsrc%5Etfw">September 12, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <a href="/index.html">back to home page</a>
+    <header>
+        <ul>
+           
+            <li><a href="/index.html">back to home page</a></li>
+        </ul>
+    </header>
+    <main>
+    <article>
+        <blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">How loud earbuds can damage your ears?<br><br>[🎞️ Zack D. Films]<a href="https://t.co/0XSlmbiUbg">pic.twitter.com/0XSlmbiUbg</a></p>&mdash; Massimo (@Rainmaker1973) <a href="https://twitter.com/Rainmaker1973/status/1834249761584529714?ref_src=twsrc%5Etfw">September 12, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="/index.html">back to home page</a>
+    </article>
+    <aside>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat fugit voluptatibus nesciunt incidunt magni consequatur quam alias et, dicta magnam iste corporis laborum voluptas officiis tenetur aut neque quis tempora.</aside>
+    <input type="text" placeholder="comments">
+    </main>
+    <footer>
+        Made by Oualid Elyaagoubi - <a href="https://github.com/Oelyaagoubi" target="_blank">here</a>.
+
+    </footer>
+   
  
 </body>
 </html>
