--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -25,7 +25,7 @@
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">open tweet</a>
         </article>
         <aside>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error beatae porro doloribus tempore officia, earum quasi voluptatibus officiis fugiat maiores, fuga sit deserunt eaque maxime atque accusamus odit iusto consequuntur?</p>
+            <p>placeholder to add comment thread later</p>
             <input type="text" placeholder="comments">
         </aside>
        
