--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,6 +23,34 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus vel distinctio aliquid enim repellat iure error reprehenderit eos animi! Cumque sint consectetur saepe iure odit error. Corporis, sint commodi!</p>
         <a href="/tweet.html">back to home page</a>
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">open tweet</a>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </table>
+
         </article>
         <aside>
             <p>placeholder to add comment thread later</p>
