fixing what needed to be fixed

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
 
     </nav>
 
-    <section id="Introduction">
+    <section id="introduction">
         <h2>Introduction</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel aliquam voluptatum possimus eos perferendis quo libero non, sit accusantium quia veritatis neque expedita numquam eius, quis soluta! Sequi, saepe necessitatibus?</p>
     </section>
@@ -46,7 +46,7 @@
         <a href="https://www.linkedin.com/in/oualid-elyaagoubi-15a7bb24b/" target="_blank"> linkedin</a>
     </section>
 
-    <footer>Copyright © 2024 OUALID ELYAAGOUBI </footer>
+    <footer><p>Copyright © 2024 OUALID ELYAAGOUBI</p> </footer>
  
 </body>
 
