--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,7 +46,7 @@
         <a href="https://www.linkedin.com/in/oualid-elyaagoubi-15a7bb24b/" target="_blank"> linkedin</a>
     </section>
 
-    <footer><p>Copyright © 2024 OUALID ELYAAGOUBI</p> </footer>
+    <footer><p>Copyright &copy; 2024 . OUALID ELYAAGOUBI</p> </footer>
  
 </body>
 
